--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
 # in the templates available like {{ site.myvariable }}.
-title: Clean portfolio theme for Jekyll powered by Bootstrap 4.
+title: сайт художника, картины, галерея
 email: your-email@domain.com
-brand: Your Name
-headline: Inventor, Engineer and Futurist
+brand: Виктор Микитенко
+headline: Художник, Архитектор
 description: > # this means to ignore newlines until "baseurl:"
   New Site
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://example.com" # the base hostname & protocol for your site
-copyright: 2016 Whatever Company, Inc. All Rights Reserved.
+copyright: 2016 Виктор Микитенко
 
 # Build settings
 markdown: kramdown
