--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
 # Site settings
 # in the templates available like {{ site.myvariable }}.
 title: сайт художника, картины, галерея
-email: your-email@domain.com
+email: mikitenko_vitya@mail.ru
 brand: Виктор Микитенко
 headline: Художник, Архитектор
 description: > # this means to ignore newlines until "baseurl:"
-  New Site
+  Сайт художника Виктора Микитенко, картины, галерея, живопись и архитектура
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://example.com" # the base hostname & protocol for your site
+url: "http://mikitenko.org.ua" # the base hostname & protocol for your site
 copyright: 2016 Виктор Микитенко
 
 # Build settings
 markdown: kramdown
 
 # Account ids
-snapwidget: 247552
+snapwidget: 270863
 
 # Contacts
-email: your.name@gmail.com
-phone: +1-800-555-2016
+email: mikitenko_vitya@mail.ru
+phone: +38 093 959-69-57
 
 # Tracking
 googleAnalitycsID: UA-83933844-1
