--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ markdown: kramdown
 snapwidget: 270863
 
 # Contacts
-email: mikitenko_vitya@mail.ru
+email: mikitenkovitya@gmail.com
 phone: +38 093 959-69-57
 
 # Tracking
