--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: mikitenkovitya@gmail.com
 brand: Виктор Микитенко
 headline: Художник, Архитектор
 description: > # this means to ignore newlines until "baseurl:"
-  Сайт художника Виктора Микитенко, картины, галерея, живопись и архитектура
+  Сайт художника Виктора Микитенко, картины, галерея, живопись, архитектура
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://mikitenko.org.ua" # the base hostname & protocol for your site
 copyright: 2016-2018 Виктор Микитенко
